--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -44,8 +44,8 @@ html
 							span.icon-bar
 							span.icon-bar
 							span.icon-bar
-						a.navbar-inverse.navbar-brand(href='/') 
-							img(src='/images/x-logoBlackSmall.png')
+						a.navbar-inverse.navbar-brand(href='/') Twisted X Boots
+							
 					.collapse.navbar-collapse.navbar-right
 						ul.nav.navbar-nav
 							li.dropdown
