--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -77,8 +77,17 @@ html
 	#footer.footer
 		.container
 			.row
-				.col-xs-12
+				.col-sm-6
 					small &copy; Raymond L. Whatley IIV 2015
+				.col-sm-6
+					ul.pull-right
+						li
+							a(href='#') Home
+						li
+							a(href='#') About
+						li
+							a(href='#') Contact Us
+
 		// /.container
 			
 
