--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -9,6 +9,7 @@ html
 		link(rel='stylesheet', href='/bootstrap/css/animate.min.css')
 		link(rel='stylesheet', href='/bootstrap/css/prettyPhoto.css')
 		link(rel='stylesheet', href='/bootstrap/css/responsive.css')
+
 	body
 		header#header
 			.top-bar
@@ -37,14 +38,14 @@ html
 			// /.top-bar			
 										
 			nav.navbar.navbar-inverse(roll='banner')
-				
+				.container
 					.navbar-header
 						button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
 							span.sr-only Toggle navigation
 							span.icon-bar
 							span.icon-bar
 							span.icon-bar
-						a.navbar-inverse.navbar-brand(href='/') Twisted X Boots
+						a.navbar-inverse.navbar-brand.arch(href='/') Twisted X Boots
 							
 					.collapse.navbar-collapse.navbar-right
 						ul.nav.navbar-nav
