--- a/app_server/views/sponsorships.jade
+++ b/app_server/views/sponsorships.jade
@@ -1,5 +1,10 @@
 extends layout
 
+
 block content
-  h1= title
-  p Welcome to #{title}
+		.container
+			.row
+				.col-xs-2
+				h1= title
+				p.lead Welcome to #{title}
+		// /.container
