--- a/public/bootstrap/css/font-awesome.css
+++ b/public/bootstrap/css/font-awesome.css
@@ -8,8 +8,50 @@
   font-family: 'FontAwesome';
   src: url('../fonts/fontawesome-webfont.eot?v=4.0.3');
   src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff?v=4.0.3') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.0.3') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
+  
   font-weight: normal;
   font-style: normal;
+}
+@font-face {
+  font-family: 'Archistico';
+  src: url('../fonts/Archistico_Bold.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Rochester';
+  src: url('../fonts/Rochester-Regular.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Exotica';
+  src: url('../fonts/Exotica.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Western';
+  src: url('../fonts/Go 2 Old Western.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Rustik';
+  src: url('../fonts/Rustik.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+.arch {
+  display: inline-block;
+  font-family: Rustik;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 72px;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: transparent;
 }
 .fa {
   display: inline-block;
